--- a/Jana/style.css
+++ b/Jana/style.css
@@ -5,7 +5,6 @@ body {
   margin: 0;
   padding: 0;
 }
-
 /* Breadcrumb */
 p {
   text-align: left;
@@ -13,25 +12,22 @@ p {
   margin-top: 30px;
   color: #555;
 }
-
-/* Table */
-table {
-  width: 80%;
-  margin: 30px auto;
-  border-collapse: collapse;
-}
-
 th {
   background-color: #bdbdbd;
   color: white;
   font-weight: bold;
 }
 
+ table {
+  width: 80%;
+  margin: 30px auto;
+  border-collapse: collapse;
+}
+
 th, td {
   padding: 15px;
   border: 1px solid #ccc;
 }
-
 caption {
   caption-side: top;
   margin-bottom: 10px;
@@ -46,7 +42,7 @@ caption {
 }
 
 .buttons a {
-  text-decoration: none;
+  text-decoration: none;/* did we take it?*/
   border: 2px solid black;
   color: black;
   padding: 12px 30px;
@@ -60,33 +56,21 @@ caption {
   background-color: black;
   color: white;
 }
-
-
-
-
 /*hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh*/
 
-
-
-/* Form Layout */
 form {
   width: 60%;
   margin: 40px auto;
   text-align: left;
 }
-
-/* Labels */
+/*no need*/
 label {
   font-weight: bold;
   display: block;
   margin-bottom: 5px;
 }
-
 /* Input fields, dropdown, textarea */
-input[type="text"],
-input[type="date"],
-select,
-textarea {
+input[type="text"],input[type="date"],select,textarea {
   width: 100%;
   padding: 12px;
   border: 2px solid black;
@@ -109,20 +93,12 @@ input[type="submit"] {
   font-size: 15px;
   cursor: pointer;
 }
-
 input[type="submit"]:hover {
   background-color: black;
   color: white;
 }
 /* ---------- Service Evaluation Page (Clickable Stars) ---------- */
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: #fffaf5;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-}
 h2 {
   margin-top: 40px;
 }
@@ -144,7 +120,6 @@ input[type="text"],input[type="date"],select,textarea {
   margin-bottom: 25px;
   background-color: white;
 }
-
 /* ---------- Stars ---------- */
 .stars {
   direction: rtl;       /* needed for left-to-right fill logic */
@@ -174,8 +149,7 @@ input[type="radio"]:checked ~ label {
 .stars label:hover ~ label {
   color: #ff914d;
 }
-
-/* ---------- Submit Button ---------- */
+/* ---------- Submit Button ------ no need cuz theres two---- */
 input[type="submit"] {
   display: block;
   margin: 0 auto;
@@ -193,5 +167,5 @@ input[type="submit"]:hover {
   background-color: black;
   color: white;
 }
-}
+
 
